@@ -2,135 +2,103 @@ package net.minecraft.client.recipebook;
 
 import com.google.common.collect.HashBasedTable;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
 import com.google.common.collect.Table;
 import com.google.common.collect.ImmutableList.Builder;
-import com.mojang.logging.LogUtils;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.OptionalInt;
+import java.util.Set;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.client.gui.screen.recipebook.RecipeResultCollection;
-import net.minecraft.recipe.AbstractCookingRecipe;
-import net.minecraft.recipe.CraftingRecipe;
-import net.minecraft.recipe.Recipe;
-import net.minecraft.recipe.RecipeEntry;
-import net.minecraft.recipe.RecipeType;
-import net.minecraft.recipe.book.CookingRecipeCategory;
+import net.minecraft.recipe.NetworkRecipeId;
+import net.minecraft.recipe.RecipeDisplayEntry;
 import net.minecraft.recipe.book.RecipeBook;
-import net.minecraft.registry.DynamicRegistryManager;
-import net.minecraft.registry.Registries;
-import org.slf4j.Logger;
+import net.minecraft.recipe.book.RecipeBookCategory;
+import net.minecraft.recipe.book.RecipeBookGroup;
 
 @Environment(EnvType.CLIENT)
 public class ClientRecipeBook extends RecipeBook {
-	private static final Logger LOGGER = LogUtils.getLogger();
-	private Map<RecipeBookGroup, List<RecipeResultCollection>> resultsByGroup = ImmutableMap.of();
-	private List<RecipeResultCollection> orderedResults = ImmutableList.of();
+	private final Map<NetworkRecipeId, RecipeDisplayEntry> recipes = new HashMap();
+	private final Set<NetworkRecipeId> highlightedRecipes = new HashSet();
+	private Map<RecipeBookCategory, List<RecipeResultCollection>> resultsByCategory = Map.of();
+	private List<RecipeResultCollection> orderedResults = List.of();
 
-	public void reload(Iterable<RecipeEntry<?>> recipes, DynamicRegistryManager registryManager) {
-		Map<RecipeBookGroup, List<List<RecipeEntry<?>>>> map = toGroupedMap(recipes);
-		Map<RecipeBookGroup, List<RecipeResultCollection>> map2 = Maps.<RecipeBookGroup, List<RecipeResultCollection>>newHashMap();
+	public void add(RecipeDisplayEntry entry) {
+		this.recipes.put(entry.id(), entry);
+	}
+
+	public void remove(NetworkRecipeId recipeId) {
+		this.recipes.remove(recipeId);
+		this.highlightedRecipes.remove(recipeId);
+	}
+
+	public boolean isHighlighted(NetworkRecipeId recipeId) {
+		return this.highlightedRecipes.contains(recipeId);
+	}
+
+	public void unmarkHighlighted(NetworkRecipeId recipeId) {
+		this.highlightedRecipes.remove(recipeId);
+	}
+
+	public void markHighlighted(NetworkRecipeId recipeId) {
+		this.highlightedRecipes.add(recipeId);
+	}
+
+	public void refresh() {
+		Map<RecipeBookGroup, List<List<RecipeDisplayEntry>>> map = toGroupedMap(this.recipes.values());
+		Map<RecipeBookCategory, List<RecipeResultCollection>> map2 = new HashMap();
 		Builder<RecipeResultCollection> builder = ImmutableList.builder();
 		map.forEach(
-			(recipeBookGroup, list) -> map2.put(
-					recipeBookGroup,
-					(List)list.stream().map(recipesx -> new RecipeResultCollection(registryManager, recipesx)).peek(builder::add).collect(ImmutableList.toImmutableList())
+			(group, resultCollections) -> map2.put(
+					group, (List)resultCollections.stream().map(RecipeResultCollection::new).peek(builder::add).collect(ImmutableList.toImmutableList())
 				)
 		);
-		RecipeBookGroup.SEARCH_MAP
-			.forEach(
-				(group, searchGroups) -> map2.put(
-						group,
-						(List)searchGroups.stream()
-							.flatMap(searchGroup -> ((List)map2.getOrDefault(searchGroup, ImmutableList.of())).stream())
-							.collect(ImmutableList.toImmutableList())
-					)
+
+		for (RecipeBookType recipeBookType : RecipeBookType.values()) {
+			map2.put(
+				recipeBookType,
+				(List)recipeBookType.getGroups().stream().flatMap(group -> ((List)map2.getOrDefault(group, List.of())).stream()).collect(ImmutableList.toImmutableList())
 			);
-		this.resultsByGroup = ImmutableMap.copyOf(map2);
+		}
+
+		this.resultsByCategory = Map.copyOf(map2);
 		this.orderedResults = builder.build();
 	}
 
-	private static Map<RecipeBookGroup, List<List<RecipeEntry<?>>>> toGroupedMap(Iterable<RecipeEntry<?>> recipes) {
-		Map<RecipeBookGroup, List<List<RecipeEntry<?>>>> map = Maps.<RecipeBookGroup, List<List<RecipeEntry<?>>>>newHashMap();
-		Table<RecipeBookGroup, String, List<RecipeEntry<?>>> table = HashBasedTable.create();
+	private static Map<RecipeBookGroup, List<List<RecipeDisplayEntry>>> toGroupedMap(Iterable<RecipeDisplayEntry> recipes) {
+		Map<RecipeBookGroup, List<List<RecipeDisplayEntry>>> map = new HashMap();
+		Table<RecipeBookGroup, Integer, List<RecipeDisplayEntry>> table = HashBasedTable.create();
 
-		for (RecipeEntry<?> recipeEntry : recipes) {
-			Recipe<?> recipe = recipeEntry.value();
-			if (!recipe.isIgnoredInRecipeBook() && !recipe.getIngredientPlacement().hasNoPlacement()) {
-				RecipeBookGroup recipeBookGroup = getGroupForRecipe(recipeEntry);
-				String string = recipe.getGroup();
-				if (string.isEmpty()) {
-					((List)map.computeIfAbsent(recipeBookGroup, group -> Lists.newArrayList())).add(ImmutableList.of(recipeEntry));
-				} else {
-					List<RecipeEntry<?>> list = table.get(recipeBookGroup, string);
-					if (list == null) {
-						list = Lists.<RecipeEntry<?>>newArrayList();
-						table.put(recipeBookGroup, string, list);
-						((List)map.computeIfAbsent(recipeBookGroup, group -> Lists.newArrayList())).add(list);
-					}
-
-					list.add(recipeEntry);
+		for (RecipeDisplayEntry recipeDisplayEntry : recipes) {
+			RecipeBookGroup recipeBookGroup = recipeDisplayEntry.category();
+			OptionalInt optionalInt = recipeDisplayEntry.group();
+			if (optionalInt.isEmpty()) {
+				((List)map.computeIfAbsent(recipeBookGroup, group -> new ArrayList())).add(List.of(recipeDisplayEntry));
+			} else {
+				List<RecipeDisplayEntry> list = table.get(recipeBookGroup, optionalInt.getAsInt());
+				if (list == null) {
+					list = new ArrayList();
+					table.put(recipeBookGroup, optionalInt.getAsInt(), list);
+					((List)map.computeIfAbsent(recipeBookGroup, group -> new ArrayList())).add(list);
 				}
+
+				list.add(recipeDisplayEntry);
 			}
 		}
 
 		return map;
 	}
 
-	private static RecipeBookGroup getGroupForRecipe(RecipeEntry<?> recipe) {
-		Recipe<?> recipe2 = recipe.value();
-		if (recipe2 instanceof CraftingRecipe craftingRecipe) {
-			return switch (craftingRecipe.getCategory()) {
-				case BUILDING -> RecipeBookGroup.CRAFTING_BUILDING_BLOCKS;
-				case EQUIPMENT -> RecipeBookGroup.CRAFTING_EQUIPMENT;
-				case REDSTONE -> RecipeBookGroup.CRAFTING_REDSTONE;
-				case MISC -> RecipeBookGroup.CRAFTING_MISC;
-			};
-		} else {
-			RecipeType<?> recipeType = recipe2.getType();
-			if (recipe2 instanceof AbstractCookingRecipe abstractCookingRecipe) {
-				CookingRecipeCategory cookingRecipeCategory = abstractCookingRecipe.getCategory();
-				if (recipeType == RecipeType.SMELTING) {
-					return switch (cookingRecipeCategory) {
-						case BLOCKS -> RecipeBookGroup.FURNACE_BLOCKS;
-						case FOOD -> RecipeBookGroup.FURNACE_FOOD;
-						case MISC -> RecipeBookGroup.FURNACE_MISC;
-					};
-				}
-
-				if (recipeType == RecipeType.BLASTING) {
-					return cookingRecipeCategory == CookingRecipeCategory.BLOCKS ? RecipeBookGroup.BLAST_FURNACE_BLOCKS : RecipeBookGroup.BLAST_FURNACE_MISC;
-				}
-
-				if (recipeType == RecipeType.SMOKING) {
-					return RecipeBookGroup.SMOKER_FOOD;
-				}
-
-				if (recipeType == RecipeType.CAMPFIRE_COOKING) {
-					return RecipeBookGroup.CAMPFIRE;
-				}
-			}
-
-			if (recipeType == RecipeType.STONECUTTING) {
-				return RecipeBookGroup.STONECUTTER;
-			} else if (recipeType == RecipeType.SMITHING) {
-				return RecipeBookGroup.SMITHING;
-			} else {
-				LOGGER.warn("Unknown recipe category: {}/{}", LogUtils.defer(() -> Registries.RECIPE_TYPE.getId(recipe2.getType())), LogUtils.defer(recipe::id));
-				return RecipeBookGroup.UNKNOWN;
-			}
-		}
-	}
-
 	public List<RecipeResultCollection> getOrderedResults() {
 		return this.orderedResults;
 	}
 
-	public List<RecipeResultCollection> getResultsForGroup(RecipeBookGroup category) {
-		return (List<RecipeResultCollection>)this.resultsByGroup.getOrDefault(category, Collections.emptyList());
+	public List<RecipeResultCollection> getResultsForCategory(RecipeBookCategory category) {
+		return (List<RecipeResultCollection>)this.resultsByCategory.getOrDefault(category, Collections.emptyList());
 	}
 }
